--- a/PyCity Schools.ipynb
+++ b/PyCity Schools.ipynb
@@ -1071,7 +1071,7 @@
   {
    "cell_type": "code",
    "execution_count": 58,
-   "id": "3a2bbe84",
+   "id": "a262f12b",
    "metadata": {},
    "outputs": [
     {
@@ -2888,7 +2888,7 @@
   {
    "cell_type": "code",
    "execution_count": 64,
-   "id": "b555c102",
+   "id": "320cfd78",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2908,7 +2908,7 @@
   {
    "cell_type": "code",
    "execution_count": 65,
-   "id": "fcff9a49",
+   "id": "2b45717b",
    "metadata": {},
    "outputs": [
     {
@@ -2983,7 +2983,7 @@
   {
    "cell_type": "code",
    "execution_count": 66,
-   "id": "bbd347f6",
+   "id": "5cf9be0b",
    "metadata": {},
    "outputs": [
     {
@@ -3022,7 +3022,7 @@
   {
    "cell_type": "code",
    "execution_count": 67,
-   "id": "64c164d3",
+   "id": "2cb13968",
    "metadata": {},
    "outputs": [
     {
@@ -3152,7 +3152,7 @@
   {
    "cell_type": "code",
    "execution_count": 68,
-   "id": "10461b77",
+   "id": "d103bd5a",
    "metadata": {},
    "outputs": [
     {
@@ -3190,7 +3190,7 @@
   {
    "cell_type": "code",
    "execution_count": 69,
-   "id": "6184ebdc",
+   "id": "83c99886",
    "metadata": {},
    "outputs": [
     {
@@ -3229,7 +3229,7 @@
   {
    "cell_type": "code",
    "execution_count": 70,
-   "id": "494ffb85",
+   "id": "80553e6e",
    "metadata": {},
    "outputs": [
     {
@@ -3267,7 +3267,7 @@
   {
    "cell_type": "code",
    "execution_count": 71,
-   "id": "7856ee97",
+   "id": "7d80c90a",
    "metadata": {},
    "outputs": [
     {
@@ -3306,7 +3306,7 @@
   {
    "cell_type": "code",
    "execution_count": 72,
-   "id": "045a7440",
+   "id": "994e361b",
    "metadata": {},
    "outputs": [
     {
@@ -3344,7 +3344,7 @@
   {
    "cell_type": "code",
    "execution_count": 73,
-   "id": "d0534fd0",
+   "id": "ba7b13dc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3355,7 +3355,7 @@
   {
    "cell_type": "code",
    "execution_count": 74,
-   "id": "099738e4",
+   "id": "06818570",
    "metadata": {},
    "outputs": [
     {
@@ -3588,7 +3588,7 @@
   {
    "cell_type": "code",
    "execution_count": 75,
-   "id": "75e8b334",
+   "id": "914f508c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3601,7 +3601,7 @@
   {
    "cell_type": "code",
    "execution_count": 76,
-   "id": "33406bcd",
+   "id": "ae549609",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3614,7 +3614,7 @@
   {
    "cell_type": "code",
    "execution_count": 77,
-   "id": "095d09eb",
+   "id": "ae8092c2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3626,7 +3626,7 @@
   {
    "cell_type": "code",
    "execution_count": 78,
-   "id": "c6493dde",
+   "id": "60ce1e2d",
    "metadata": {},
    "outputs": [
     {
@@ -3660,7 +3660,7 @@
   {
    "cell_type": "code",
    "execution_count": 79,
-   "id": "03240506",
+   "id": "4878d5dc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3672,7 +3672,7 @@
   {
    "cell_type": "code",
    "execution_count": 80,
-   "id": "8f49e223",
+   "id": "f802667c",
    "metadata": {},
    "outputs": [
     {
@@ -3705,7 +3705,7 @@
   {
    "cell_type": "code",
    "execution_count": 81,
-   "id": "b4f614bc",
+   "id": "2658f18b",
    "metadata": {},
    "outputs": [
     {
@@ -3847,7 +3847,7 @@
   {
    "cell_type": "code",
    "execution_count": 82,
-   "id": "40be586f",
+   "id": "358643fd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3858,7 +3858,7 @@
   {
    "cell_type": "code",
    "execution_count": 83,
-   "id": "acba204b",
+   "id": "18be2e66",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3869,7 +3869,7 @@
   {
    "cell_type": "code",
    "execution_count": 84,
-   "id": "1312dcad",
+   "id": "38b37435",
    "metadata": {},
    "outputs": [
     {
@@ -4023,7 +4023,7 @@
   {
    "cell_type": "code",
    "execution_count": 85,
-   "id": "3718b575",
+   "id": "87f17262",
    "metadata": {},
    "outputs": [
     {
@@ -4172,7 +4172,7 @@
   {
    "cell_type": "code",
    "execution_count": 86,
-   "id": "3a2f31ce",
+   "id": "62369563",
    "metadata": {},
    "outputs": [
     {
@@ -4317,7 +4317,7 @@
   {
    "cell_type": "code",
    "execution_count": 87,
-   "id": "3083af2b",
+   "id": "c64a4cd3",
    "metadata": {},
    "outputs": [
     {
@@ -4462,7 +4462,7 @@
   {
    "cell_type": "code",
    "execution_count": 88,
-   "id": "decbfcb1",
+   "id": "81ba89c9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4476,7 +4476,7 @@
   {
    "cell_type": "code",
    "execution_count": 89,
-   "id": "630baaeb",
+   "id": "029ff4a5",
    "metadata": {},
    "outputs": [
     {
@@ -4520,7 +4520,7 @@
   {
    "cell_type": "code",
    "execution_count": 90,
-   "id": "c1343744",
+   "id": "dedd9d42",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4537,7 +4537,7 @@
   {
    "cell_type": "code",
    "execution_count": 91,
-   "id": "c40918a4",
+   "id": "1d569578",
    "metadata": {},
    "outputs": [
     {
@@ -4571,7 +4571,7 @@
   {
    "cell_type": "code",
    "execution_count": 92,
-   "id": "e8dcd0fc",
+   "id": "aaeb9f70",
    "metadata": {},
    "outputs": [
     {
@@ -4605,7 +4605,7 @@
   {
    "cell_type": "code",
    "execution_count": 93,
-   "id": "b8379a12",
+   "id": "30c87a4b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4622,7 +4622,7 @@
   {
    "cell_type": "code",
    "execution_count": 94,
-   "id": "b6d45975",
+   "id": "4d39db65",
    "metadata": {},
    "outputs": [
     {
@@ -4728,7 +4728,7 @@
   {
    "cell_type": "code",
    "execution_count": 95,
-   "id": "c106c1c3",
+   "id": "6e85b3e3",
    "metadata": {},
    "outputs": [
     {
@@ -4834,7 +4834,7 @@
   {
    "cell_type": "code",
    "execution_count": 99,
-   "id": "7eff9b33",
+   "id": "4f8af19f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4853,7 +4853,7 @@
   {
    "cell_type": "code",
    "execution_count": 101,
-   "id": "aeb08f77",
+   "id": "6049cf01",
    "metadata": {},
    "outputs": [
     {
@@ -4950,7 +4950,7 @@
   {
    "cell_type": "code",
    "execution_count": 102,
-   "id": "913e4cf4",
+   "id": "ecb8885a",
    "metadata": {},
    "outputs": [
     {
@@ -5056,7 +5056,7 @@
   {
    "cell_type": "code",
    "execution_count": 103,
-   "id": "ff0d1c35",
+   "id": "12983086",
    "metadata": {},
    "outputs": [
     {
@@ -5086,7 +5086,7 @@
   {
    "cell_type": "code",
    "execution_count": 104,
-   "id": "d3df0933",
+   "id": "a0fd6fab",
    "metadata": {},
    "outputs": [
     {
@@ -5125,7 +5125,7 @@
   {
    "cell_type": "code",
    "execution_count": 106,
-   "id": "8dbe44f8",
+   "id": "eaebdeb5",
    "metadata": {},
    "outputs": [
     {
@@ -5152,7 +5152,7 @@
   {
    "cell_type": "code",
    "execution_count": 107,
-   "id": "bc730d55",
+   "id": "aacea1eb",
    "metadata": {},
    "outputs": [
     {
@@ -5179,7 +5179,7 @@
   {
    "cell_type": "code",
    "execution_count": 108,
-   "id": "4a3df4d3",
+   "id": "8f80c4a8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -5191,7 +5191,7 @@
   {
    "cell_type": "code",
    "execution_count": 109,
-   "id": "517ad6a7",
+   "id": "e8a1e00c",
    "metadata": {},
    "outputs": [
     {
@@ -5529,7 +5529,7 @@
   {
    "cell_type": "code",
    "execution_count": 110,
-   "id": "5467cd9e",
+   "id": "b59da244",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -5548,7 +5548,7 @@
   {
    "cell_type": "code",
    "execution_count": 111,
-   "id": "1beb7200",
+   "id": "7873feca",
    "metadata": {},
    "outputs": [
     {
@@ -5571,7 +5571,7 @@
   {
    "cell_type": "code",
    "execution_count": 112,
-   "id": "e2b3e3ac",
+   "id": "e3e1f383",
    "metadata": {},
    "outputs": [
     {
@@ -5690,7 +5690,7 @@
   {
    "cell_type": "code",
    "execution_count": 113,
-   "id": "2bafdf1d",
+   "id": "48dea4da",
    "metadata": {},
    "outputs": [
     {
@@ -5812,7 +5812,7 @@
   {
    "cell_type": "code",
    "execution_count": 114,
-   "id": "725847c7",
+   "id": "12e38c61",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -5824,7 +5824,7 @@
   {
    "cell_type": "code",
    "execution_count": 115,
-   "id": "1ca2d084",
+   "id": "0622ee87",
    "metadata": {},
    "outputs": [
     {
@@ -5988,7 +5988,7 @@
   {
    "cell_type": "code",
    "execution_count": 116,
-   "id": "2471053b",
+   "id": "507eadd4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -6007,7 +6007,7 @@
   {
    "cell_type": "code",
    "execution_count": 117,
-   "id": "29fb17a0",
+   "id": "37a91922",
    "metadata": {},
    "outputs": [
     {
@@ -6108,8 +6108,319 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 118,
+   "id": "613c781a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Average Math Score</th>\n",
+       "      <th>Average Reading Score</th>\n",
+       "      <th>% Passing Math</th>\n",
+       "      <th>% Passing Reading</th>\n",
+       "      <th>% Overall Passing</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>School Size</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Small (&lt;1000)</th>\n",
+       "      <td>83.8</td>\n",
+       "      <td>83.9</td>\n",
+       "      <td>94</td>\n",
+       "      <td>96</td>\n",
+       "      <td>90</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Medium (1000-1999)</th>\n",
+       "      <td>83.4</td>\n",
+       "      <td>83.9</td>\n",
+       "      <td>94</td>\n",
+       "      <td>97</td>\n",
+       "      <td>91</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Large (2000-5000)</th>\n",
+       "      <td>77.7</td>\n",
+       "      <td>81.3</td>\n",
+       "      <td>70</td>\n",
+       "      <td>83</td>\n",
+       "      <td>58</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                   Average Math Score Average Reading Score % Passing Math  \\\n",
+       "School Size                                                                  \n",
+       "Small (<1000)                    83.8                  83.9             94   \n",
+       "Medium (1000-1999)               83.4                  83.9             94   \n",
+       "Large (2000-5000)                77.7                  81.3             70   \n",
+       "\n",
+       "                   % Passing Reading % Overall Passing  \n",
+       "School Size                                             \n",
+       "Small (<1000)                     96                90  \n",
+       "Medium (1000-1999)                97                91  \n",
+       "Large (2000-5000)                 83                58  "
+      ]
+     },
+     "execution_count": 118,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Formatting.\n",
+    "size_summary_df[\"Average Math Score\"] = size_summary_df[\"Average Math Score\"].map(\"{:.1f}\".format)\n",
+    "\n",
+    "size_summary_df[\"Average Reading Score\"] = size_summary_df[\"Average Reading Score\"].map(\"{:.1f}\".format)\n",
+    "\n",
+    "size_summary_df[\"% Passing Math\"] = size_summary_df[\"% Passing Math\"].map(\"{:.0f}\".format)\n",
+    "\n",
+    "size_summary_df[\"% Passing Reading\"] = size_summary_df[\"% Passing Reading\"].map(\"{:.0f}\".format)\n",
+    "\n",
+    "size_summary_df[\"% Overall Passing\"] = size_summary_df[\"% Overall Passing\"].map(\"{:.0f}\".format)\n",
+    "\n",
+    "size_summary_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 119,
+   "id": "fe871ba3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Calculate averages for the desired columns.\n",
+    "type_math_scores = per_school_summary_df.groupby([\"School Type\"]).mean()[\"Average Math Score\"]\n",
+    "\n",
+    "type_reading_scores = per_school_summary_df.groupby([\"School Type\"]).mean()[\"Average Reading Score\"]\n",
+    "\n",
+    "type_passing_math = per_school_summary_df.groupby([\"School Type\"]).mean()[\"% Passing Math\"]\n",
+    "\n",
+    "type_passing_reading = per_school_summary_df.groupby([\"School Type\"]).mean()[\"% Passing Reading\"]\n",
+    "\n",
+    "type_overall_passing = per_school_summary_df.groupby([\"School Type\"]).mean()[\"% Overall Passing\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 120,
+   "id": "9668ebb6",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Average Math Score</th>\n",
+       "      <th>Average Reading Score</th>\n",
+       "      <th>% Passing Math</th>\n",
+       "      <th>% Passing Reading</th>\n",
+       "      <th>% Overall Passing</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>School Type</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Charter</th>\n",
+       "      <td>83.473852</td>\n",
+       "      <td>83.896421</td>\n",
+       "      <td>93.620830</td>\n",
+       "      <td>96.586489</td>\n",
+       "      <td>90.432244</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>District</th>\n",
+       "      <td>76.956733</td>\n",
+       "      <td>80.966636</td>\n",
+       "      <td>66.548453</td>\n",
+       "      <td>80.799062</td>\n",
+       "      <td>53.672208</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "             Average Math Score  Average Reading Score  % Passing Math  \\\n",
+       "School Type                                                              \n",
+       "Charter               83.473852              83.896421       93.620830   \n",
+       "District              76.956733              80.966636       66.548453   \n",
+       "\n",
+       "             % Passing Reading  % Overall Passing  \n",
+       "School Type                                        \n",
+       "Charter              96.586489          90.432244  \n",
+       "District             80.799062          53.672208  "
+      ]
+     },
+     "execution_count": 120,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Assemble into DataFrame.\n",
+    "type_summary_df = pd.DataFrame({\n",
+    "          \"Average Math Score\" : type_math_scores,\n",
+    "          \"Average Reading Score\": type_reading_scores,\n",
+    "          \"% Passing Math\": type_passing_math,\n",
+    "          \"% Passing Reading\": type_passing_reading,\n",
+    "          \"% Overall Passing\": type_overall_passing})\n",
+    "\n",
+    "type_summary_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 121,
+   "id": "26070fe7",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Average Math Score</th>\n",
+       "      <th>Average Reading Score</th>\n",
+       "      <th>% Passing Math</th>\n",
+       "      <th>% Passing Reading</th>\n",
+       "      <th>% Overall Passing</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>School Type</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Charter</th>\n",
+       "      <td>83.5</td>\n",
+       "      <td>83.9</td>\n",
+       "      <td>94</td>\n",
+       "      <td>97</td>\n",
+       "      <td>90</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>District</th>\n",
+       "      <td>77.0</td>\n",
+       "      <td>81.0</td>\n",
+       "      <td>67</td>\n",
+       "      <td>81</td>\n",
+       "      <td>54</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "            Average Math Score Average Reading Score % Passing Math  \\\n",
+       "School Type                                                           \n",
+       "Charter                   83.5                  83.9             94   \n",
+       "District                  77.0                  81.0             67   \n",
+       "\n",
+       "            % Passing Reading % Overall Passing  \n",
+       "School Type                                      \n",
+       "Charter                    97                90  \n",
+       "District                   81                54  "
+      ]
+     },
+     "execution_count": 121,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Formatting\n",
+    "type_summary_df[\"Average Math Score\"] = type_summary_df[\"Average Math Score\"].map(\"{:.1f}\".format)\n",
+    "\n",
+    "type_summary_df[\"Average Reading Score\"] = type_summary_df[\"Average Reading Score\"].map(\"{:.1f}\".format)\n",
+    "\n",
+    "type_summary_df[\"% Passing Math\"] = type_summary_df[\"% Passing Math\"].map(\"{:.0f}\".format)\n",
+    "\n",
+    "type_summary_df[\"% Passing Reading\"] = type_summary_df[\"% Passing Reading\"].map(\"{:.0f}\".format)\n",
+    "\n",
+    "type_summary_df[\"% Overall Passing\"] = type_summary_df[\"% Overall Passing\"].map(\"{:.0f}\".format)\n",
+    "\n",
+    "type_summary_df"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "97914ae9",
+   "id": "26e39bc7",
    "metadata": {},
    "outputs": [],
    "source": []
