PyCitySchools_Challenge_testing.

--- a/PyCitySchools_Challenge_testing.ipynb
+++ b/PyCitySchools_Challenge_testing.ipynb
@@ -2,15 +2,15 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "7c5f4ec5",
+   "execution_count": 7,
+   "id": "8a0b5351",
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\aggie\\AppData\\Local\\Temp\\ipykernel_19348\\3904321406.py:18: FutureWarning: The default value of regex will change from True to False in a future version.\n",
+      "C:\\Users\\aggie\\AppData\\Local\\Temp\\ipykernel_15140\\3904321406.py:18: FutureWarning: The default value of regex will change from True to False in a future version.\n",
       "  student_data_df[\"student_name\"] = student_data_df[\"student_name\"].str.replace(word,\"\")\n"
      ]
     },
@@ -175,7 +175,7 @@
        "9          84  "
       ]
      },
-     "execution_count": 2,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -206,7 +206,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d0e8b5ca",
+   "id": "ac4b80a8",
    "metadata": {},
    "source": [
     "## Deliverable 1: Replace the reading and math scores.\n",
@@ -216,8 +216,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "ab5c0b0b",
+   "execution_count": 8,
+   "id": "0f92a5a7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -228,8 +228,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "66194810",
+   "execution_count": 9,
+   "id": "9f52c591",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -240,8 +240,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "144c035c",
+   "execution_count": 10,
+   "id": "41e879a1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -251,8 +251,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "id": "f02a0692",
+   "execution_count": 11,
+   "id": "a58f47c6",
    "metadata": {},
    "outputs": [
     {
@@ -431,7 +431,7 @@
        "[461 rows x 7 columns]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -443,7 +443,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "404451eb",
+   "id": "9f57b7e6",
    "metadata": {},
    "source": [
     "## Deliverable 2 : Repeat the school district analysis"
@@ -451,7 +451,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d3e4cf71",
+   "id": "35239bab",
    "metadata": {},
    "source": [
     "### District Summary"
@@ -459,8 +459,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "id": "9f405e45",
+   "execution_count": 12,
+   "id": "64525ae5",
    "metadata": {},
    "outputs": [
     {
@@ -588,7 +588,7 @@
        "4        84.0          0  District  2917  1910635  "
       ]
      },
-     "execution_count": 7,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -601,8 +601,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "id": "5b840dde",
+   "execution_count": 13,
+   "id": "67f54578",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -616,8 +616,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "id": "b3db8320",
+   "execution_count": 14,
+   "id": "b687a110",
    "metadata": {},
    "outputs": [
     {
@@ -634,8 +634,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "id": "5c8df2e4",
+   "execution_count": 15,
+   "id": "77128dc8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -646,28 +646,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "id": "f8b5a584",
+   "execution_count": 37,
+   "id": "695e3bba",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Student ID       38709\n",
-       "student_name     38709\n",
-       "gender           38709\n",
-       "grade            38709\n",
-       "school_name      38709\n",
-       "reading_score    38709\n",
-       "math_score       38709\n",
-       "School ID        38709\n",
-       "type             38709\n",
-       "size             38709\n",
-       "budget           38709\n",
-       "dtype: int64"
+       "38709"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -675,7 +664,7 @@
    "source": [
     "# Step 1. Get the number of students that are in ninth grade at Thomas High School.\n",
     "# These students have no grades. \n",
-    "school_data_complete_df.loc[(school_data_complete_df[\"school_name\"]==\"Thomas High School\") & (school_data_complete_df[\"grade\"]==\"9th\")].count()\n",
+    "school_data_complete_df.loc[(school_data_complete_df[\"school_name\"]==\"Thomas High School\") & (school_data_complete_df[\"grade\"]==\"9th\")].count()[\"Student ID\"] \n",
     "\n",
     "# Get the total student count \n",
     "student_count = school_data_complete_df[\"Student ID\"].count()\n",
@@ -683,13 +672,13 @@
     "\n",
     "# Step 2. Subtract the number of students that are in ninth grade at \n",
     "# Thomas High School from the total student count to get the new total student count.\n",
-    "school_data_complete_df.loc[~((school_data_complete_df[\"school_name\"]==\"Thomas High School\") & (school_data_complete_df[\"grade\"]==\"9th\"))].count()"
+    "school_data_complete_df.loc[~((school_data_complete_df[\"school_name\"]==\"Thomas High School\") & (school_data_complete_df[\"grade\"]==\"9th\"))].count()[\"Student ID\"] "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "id": "711ddaed",
+   "execution_count": 19,
+   "id": "12707652",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -700,8 +689,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "id": "aa62d8ae",
+   "execution_count": 20,
+   "id": "c6bde1a5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -710,8 +699,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "id": "61c1addf",
+   "execution_count": 38,
+   "id": "ad9228cd",
    "metadata": {},
    "outputs": [
     {
@@ -728,8 +717,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "id": "c5e77d86",
+   "execution_count": 39,
+   "id": "6a4f000d",
    "metadata": {},
    "outputs": [
     {
@@ -746,8 +735,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
-   "id": "3d5b6265",
+   "execution_count": 40,
+   "id": "4e38864b",
    "metadata": {},
    "outputs": [
     {
@@ -764,8 +753,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
-   "id": "5cab850f",
+   "execution_count": 23,
+   "id": "35da9e1f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -777,8 +766,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
-   "id": "cfa11f5d",
+   "execution_count": 24,
+   "id": "443a68b2",
    "metadata": {},
    "outputs": [
     {
@@ -795,8 +784,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
-   "id": "33baa362",
+   "execution_count": 41,
+   "id": "91c10c89",
    "metadata": {},
    "outputs": [
     {
@@ -813,8 +802,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
-   "id": "f5d8a788",
+   "execution_count": 26,
+   "id": "c412bc98",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -832,8 +821,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
-   "id": "a1093a97",
+   "execution_count": 42,
+   "id": "d44d2075",
    "metadata": {},
    "outputs": [
     {
@@ -891,7 +880,7 @@
        "0                  81.9           74.8              85.7              64.9  "
       ]
      },
-     "execution_count": 22,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -927,8 +916,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
-   "id": "dd52c873",
+   "execution_count": 29,
+   "id": "d79bf7ff",
    "metadata": {},
    "outputs": [
     {
@@ -986,7 +975,7 @@
        "0                  81.9           74.8              85.7              64.9  "
       ]
      },
-     "execution_count": 23,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -997,7 +986,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "796fe3c3",
+   "id": "8d5983d2",
    "metadata": {},
    "source": [
     "##  School Summary"
@@ -1005,8 +994,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
-   "id": "fc2b43cc",
+   "execution_count": 30,
+   "id": "ba92898a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1050,8 +1039,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
-   "id": "70310a28",
+   "execution_count": 31,
+   "id": "bfd37fa8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1074,7 +1063,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "5b71ead3",
+   "id": "39965b17",
    "metadata": {},
    "outputs": [
     {
@@ -1380,19 +1369,91 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "a31664ea",
+   "execution_count": 45,
+   "id": "a8a5b3f5",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "421"
+      ]
+     },
+     "execution_count": 45,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Step 5.  Get the number of 10th-12th graders from Thomas High School (THS).\n",
-    "school_data_complete_df.loc[(school_data_complete_df[\"school_name\"]==\"Thomas High School\") & (school_data_complete_df[\"grade\"]==\"10th\",\"11th\",\"12\")].count()"
+    "school_data_complete_df.loc[(school_data_complete_df[\"school_name\"]==\"Thomas High School\") & (school_data_complete_df[\"grade\"]==\"10th\")].count()[\"Student ID\"]\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "id": "84f38726",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "415"
+      ]
+     },
+     "execution_count": 46,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "school_data_complete_df.loc[(school_data_complete_df[\"school_name\"]==\"Thomas High School\") & (school_data_complete_df[\"grade\"]==\"11th\")].count()[\"Student ID\"]\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "id": "5852dd4b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "338"
+      ]
+     },
+     "execution_count": 47,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "school_data_complete_df.loc[(school_data_complete_df[\"school_name\"]==\"Thomas High School\") & (school_data_complete_df[\"grade\"]==\"12th\")].count()[\"Student ID\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "id": "0ce0bd4f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n"
+     ]
+    }
+   ],
+   "source": [
+    "new_overall_student_count = school_data_complete_df.loc[(school_data_complete_df[\"school_name\"]==\"Thomas High School\") & (school_data_complete_df[\"grade\"]==\"10th\") & (school_data_complete_df[\"grade\"]==\"11th\") & (school_data_complete_df[\"grade\"]==\"12th\") ].count()[\"Student ID\"]\n",
+    "print(new_overall_student_count)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f171250b",
+   "id": "a71a5d07",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1404,7 +1465,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f38e2b3a",
+   "id": "e84eb26a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1416,38 +1477,40 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d8baa1e3",
+   "id": "08f13fdb",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Step 8. Get all the students passing math and reading from THS\n",
-    "overall_per_school_grade_passing_math_reading = overall_per_school_grade_passing_math_readin_df[new_overall_passing_math & new_overall_passing_reading]                                            & (school_data_complete_df[\"math_score\"] >= 70)]"
+    "new_overall_passing_math_reading = (new_overall_passing_math) & (new_overall_passing_reading).count()[\"Student ID\"]                                            "
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e1484219",
+   "id": "91bffe1b",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Step 9. Calculate the percentage of 10th-12th grade students passing math from Thomas High School. \n"
+    "# Step 9. Calculate the percentage of 10th-12th grade students passing math from Thomas High School. \n",
+    "new_overall_passing_math_percentage = new_overall_passing_math / per_school_counts * 100"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4239e0a0",
+   "id": "907ef58f",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Step 10. Calculate the percentage of 10th-12th grade students passing reading from Thomas High School.\n"
+    "# Step 10. Calculate the percentage of 10th-12th grade students passing reading from Thomas High School.\n",
+    "new_overall_passing_reading_percentage = new_overall_passing_reading / per_school_counts * 100"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7648b06d",
+   "id": "77194c0f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1458,7 +1521,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e75d81c1",
+   "id": "8e21f355",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1468,7 +1531,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cc8840ba",
+   "id": "676bc53e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1478,7 +1541,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6a84c4ff",
+   "id": "785ea524",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1488,7 +1551,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "59e3648d",
+   "id": "344318c6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1497,7 +1560,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "58bbfac7",
+   "id": "4edd062e",
    "metadata": {},
    "source": [
     "## High and Low Performing Schools "
@@ -1506,7 +1569,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0d7e87d0",
+   "id": "9a57e711",
    "metadata": {
     "scrolled": true
    },
@@ -1518,7 +1581,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d600d6df",
+   "id": "8c503346",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1527,7 +1590,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "79b24830",
+   "id": "40537825",
    "metadata": {
     "collapsed": true
    },
@@ -1538,7 +1601,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9a38984f",
+   "id": "b8981bfb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1554,7 +1617,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "099cd874",
+   "id": "575acda5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1564,7 +1627,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "33a00b7f",
+   "id": "09705157",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1574,7 +1637,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0d399d8c",
+   "id": "b983754a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1584,7 +1647,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3eec4938",
+   "id": "4e109366",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1597,7 +1660,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d15a30be",
+   "id": "eda9a536",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1609,7 +1672,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d44d054a",
+   "id": "e142200d",
    "metadata": {},
    "source": [
     "## Scores by School Spending"
@@ -1618,7 +1681,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7dd8dcc5",
+   "id": "a114afc3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1631,7 +1694,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "52573597",
+   "id": "c1b9b15a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1641,7 +1704,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f0397e73",
+   "id": "74265503",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1651,7 +1714,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "51c2dc9b",
+   "id": "79d8847a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1660,7 +1723,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e9ca2693",
+   "id": "f80fdbec",
    "metadata": {},
    "source": [
     "## Scores by School Size"
@@ -1669,7 +1732,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d9635774",
+   "id": "dd86ca1d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1681,7 +1744,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "27b566cb",
+   "id": "76653fff",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1691,7 +1754,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c257b7b7",
+   "id": "ad44e517",
    "metadata": {
     "scrolled": true
    },
@@ -1703,7 +1766,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "12b605be",
+   "id": "d07435d8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1712,7 +1775,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a92d4ebf",
+   "id": "6b7a1c38",
    "metadata": {},
    "source": [
     "## Scores by School Type"
@@ -1721,7 +1784,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4d1271f5",
+   "id": "12cc2003",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1731,7 +1794,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "38f341ab",
+   "id": "d7997aa6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1741,7 +1804,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3f6b29ea",
+   "id": "ec5e7385",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1751,7 +1814,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e969e3eb",
+   "id": "3510c9d9",
    "metadata": {},
    "outputs": [],
    "source": []
