PyCitySchools_Challenge_testing.

--- a/PyCitySchools_Challenge_testing.ipynb
+++ b/PyCitySchools_Challenge_testing.ipynb
@@ -1392,7 +1392,7 @@
   {
    "cell_type": "code",
    "execution_count": 46,
-   "id": "84f38726",
+   "id": "fb44610b",
    "metadata": {},
    "outputs": [
     {
@@ -1413,7 +1413,7 @@
   {
    "cell_type": "code",
    "execution_count": 47,
-   "id": "5852dd4b",
+   "id": "dea2b626",
    "metadata": {},
    "outputs": [
     {
@@ -1433,33 +1433,62 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
-   "id": "0ce0bd4f",
+   "execution_count": 54,
+   "id": "aa1bc2cd",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0\n"
+      "1174\n"
      ]
     }
    ],
    "source": [
-    "new_overall_student_count = school_data_complete_df.loc[(school_data_complete_df[\"school_name\"]==\"Thomas High School\") & (school_data_complete_df[\"grade\"]==\"10th\") & (school_data_complete_df[\"grade\"]==\"11th\") & (school_data_complete_df[\"grade\"]==\"12th\") ].count()[\"Student ID\"]\n",
+    "# Step 5 SOLUTION.  Get the number of 10th-12th graders from Thomas High School (THS).\n",
+    "new_overall_student_count = school_data_complete_df.loc[(school_data_complete_df[\"school_name\"]==\"Thomas High School\") & (school_data_complete_df[\"grade\"]==\"10th\") + (school_data_complete_df[\"grade\"]==\"11th\") + (school_data_complete_df[\"grade\"]==\"12th\") ].count()[\"Student ID\"]\n",
     "print(new_overall_student_count)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a71a5d07",
+   "id": "9cf388c2",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Step 6. Get all the students passing math from THS\n",
-    "per_school_grade_passing_math = school_data_complete_df[(school_data_complete_df[\"math_score\"] >= 70)]\n",
-    "new_overall_passing_math = per_school_grade_passing_math.groupby([\"Thomas High School\"]).count()[\"Student ID\"]"
+    "new_overall_passing_math = new_overall_student_count + school_data_complete_df[(school_data_complete_df) + school_data_complete_df[\"math_score\"] >= 70].count()[\"Student ID\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "id": "12f9071c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0       NaN\n",
+      "1       NaN\n",
+      "2       NaN\n",
+      "3       NaN\n",
+      "4       NaN\n",
+      "         ..\n",
+      "39165   NaN\n",
+      "39166   NaN\n",
+      "39167   NaN\n",
+      "39168   NaN\n",
+      "39169   NaN\n",
+      "Name: Student ID, Length: 39170, dtype: float64\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(new_overall_passing_math)"
    ]
   },
   {
