PyCitySchools_Cahallenge_testing.

--- a/PyCitySchools_Challenge_testing.ipynb
+++ b/PyCitySchools_Challenge_testing.ipynb
@@ -1392,7 +1392,7 @@
   {
    "cell_type": "code",
    "execution_count": 46,
-   "id": "fb44610b",
+   "id": "01c95ef6",
    "metadata": {},
    "outputs": [
     {
@@ -1413,7 +1413,7 @@
   {
    "cell_type": "code",
    "execution_count": 47,
-   "id": "dea2b626",
+   "id": "9f5cd60e",
    "metadata": {},
    "outputs": [
     {
@@ -1433,8 +1433,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
-   "id": "aa1bc2cd",
+   "execution_count": 91,
+   "id": "524c622b",
    "metadata": {},
    "outputs": [
     {
@@ -1447,60 +1447,75 @@
    ],
    "source": [
     "# Step 5 SOLUTION.  Get the number of 10th-12th graders from Thomas High School (THS).\n",
-    "new_overall_student_count = school_data_complete_df.loc[(school_data_complete_df[\"school_name\"]==\"Thomas High School\") & (school_data_complete_df[\"grade\"]==\"10th\") + (school_data_complete_df[\"grade\"]==\"11th\") + (school_data_complete_df[\"grade\"]==\"12th\") ].count()[\"Student ID\"]\n",
+    "new_overall_student_count_df = school_data_complete_df.loc[(school_data_complete_df[\"school_name\"]==\"Thomas High School\") & (school_data_complete_df[\"grade\"]==\"10th\") + (school_data_complete_df[\"grade\"]==\"11th\") + (school_data_complete_df[\"grade\"]==\"12th\") ].count()[\"Student ID\"]\n",
     "print(new_overall_student_count)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "9cf388c2",
+   "execution_count": 112,
+   "id": "0bac9b7b",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "unexpected EOF while parsing (1958727051.py, line 2)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;36m  Input \u001b[1;32mIn [112]\u001b[1;36m\u001b[0m\n\u001b[1;33m    new_overall_passing_math_df = school_data_complete_df.loc[(student_data_df[\"school_name\"]==\"Thomas High School\") & (student_data_df[\"grade\"]==\"10th\", \"11th\", \"12th\") + (student_data_df[\"math_score\"]>= 70).count()\u001b[0m\n\u001b[1;37m                                                                                                                                                                                                                         ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m unexpected EOF while parsing\n"
+     ]
+    }
+   ],
    "source": [
     "# Step 6. Get all the students passing math from THS\n",
-    "new_overall_passing_math = new_overall_student_count + school_data_complete_df[(school_data_complete_df) + school_data_complete_df[\"math_score\"] >= 70].count()[\"Student ID\"]"
+    "new_overall_passing_math_df = school_data_complete_df.loc[(student_data_df[\"school_name\"]==\"Thomas High School\") & (student_data_df[\"grade\"]==\"10th\", \"11th\", \"12th\") + (student_data_df[\"math_score\"]>= 70).count() "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
-   "id": "12f9071c",
+   "execution_count": 89,
+   "id": "7ed1ed34",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0       NaN\n",
-      "1       NaN\n",
-      "2       NaN\n",
-      "3       NaN\n",
-      "4       NaN\n",
-      "         ..\n",
-      "39165   NaN\n",
-      "39166   NaN\n",
-      "39167   NaN\n",
-      "39168   NaN\n",
-      "39169   NaN\n",
-      "Name: Student ID, Length: 39170, dtype: float64\n"
+      "30113\n"
      ]
     }
    ],
    "source": [
-    "print(new_overall_passing_math)"
+    "print(new_overall_passing_math_df)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 83,
    "id": "e84eb26a",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Step 7. Get all the students passing reading from THS\n",
-    "per_school_grade_passing_reading = school_data_complete_df[(school_data_complete_df[\"reading_score\"] >= 70)]\n",
-    "new_overall_passing_reading = per_school_grade_passing_reading.groupby([\"Thomas High School\"]).count()[\"Student ID\"]"
+    "new_overall_passing_reading_df = new_overall_student_count_df + school_data_complete_df.loc[(school_data_complete_df[\"reading_score\"] >= 70)].count()[\"Student ID\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 85,
+   "id": "8e13127f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "34332\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(new_overall_passing_reading_df)"
    ]
   },
   {
@@ -1511,7 +1526,7 @@
    "outputs": [],
    "source": [
     "# Step 8. Get all the students passing math and reading from THS\n",
-    "new_overall_passing_math_reading = (new_overall_passing_math) & (new_overall_passing_reading).count()[\"Student ID\"]                                            "
+    "new_overall_passing_math_reading = (new_overall_passing_math) + (new_overall_passing_reading).count()[\"Student ID\"]                                            "
    ]
   },
   {
