PyCitySchools_Challenge_testing.

--- a/PyCitySchools_Challenge_testing.ipynb
+++ b/PyCitySchools_Challenge_testing.ipynb
@@ -1392,7 +1392,7 @@
   {
    "cell_type": "code",
    "execution_count": 46,
-   "id": "d6eefaa1",
+   "id": "5c0c1d13",
    "metadata": {},
    "outputs": [
     {
@@ -1413,7 +1413,7 @@
   {
    "cell_type": "code",
    "execution_count": 47,
-   "id": "a1eb5a72",
+   "id": "c5b3fd1f",
    "metadata": {},
    "outputs": [
     {
@@ -1434,7 +1434,7 @@
   {
    "cell_type": "code",
    "execution_count": 91,
-   "id": "5ae2b084",
+   "id": "1da4e013",
    "metadata": {},
    "outputs": [
     {
@@ -1454,7 +1454,7 @@
   {
    "cell_type": "code",
    "execution_count": 113,
-   "id": "16d1bff8",
+   "id": "e0484a03",
    "metadata": {},
    "outputs": [
     {
@@ -1935,7 +1935,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 140,
+   "execution_count": 150,
    "id": "08f13fdb",
    "metadata": {},
    "outputs": [],
@@ -1946,36 +1946,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 141,
-   "id": "7c9e19cc",
+   "execution_count": 152,
+   "id": "2c8ab65e",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "37535    152.0\n",
-      "37536    166.0\n",
-      "37541    156.0\n",
-      "37542    185.0\n",
-      "37544    163.0\n",
-      "         ...  \n",
-      "39163    165.0\n",
-      "39165    189.0\n",
-      "39166    165.0\n",
-      "39168    189.0\n",
-      "39169    170.0\n",
-      "Length: 1169, dtype: float64\n"
-     ]
+     "data": {
+      "text/plain": [
+       "1064"
+      ]
+     },
+     "execution_count": 152,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "print(THS_passing_math_reading_count)"
+    "THS_passing_math_reading_count.count()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 143,
+   "execution_count": 157,
    "id": "91bffe1b",
    "metadata": {},
    "outputs": [],
@@ -1986,7 +1978,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 144,
+   "execution_count": 154,
    "id": "907ef58f",
    "metadata": {},
    "outputs": [],
